# DeepResearch-Stack

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: main.py
frontend/: app.py
ingestion/: ingest_sources.py
retrieval/: bm25.py  chunking.py  embedder.py  fusion.py  hybrid.py  qa_pipeline.py  qdrant_store.py
